@@ -116,6 +116,12 @@
 				</listitem>
 			</varlistentry>
 			<varlistentry>
+				<term><option>$SYS/broker/clients/active</option></term>
+				<listitem>
+					<para>The number of currently connected clients</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>$SYS/broker/clients/inactive</option></term>
 				<listitem>
 					<para>The total number of persistent clients (with clean
